# Refresh

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv
.claude/: AGENTS.md  CLAUDE.md  context-codex.md  operations-log.md  review-report.md  structured-request.md
Guides/: JX_CO2_102手册.md  MQTT.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
main/actuators/: fan_control.c  fan_control.h
main/algorithm/: decision_engine.c  decision_engine.h  local_mode.c  local_mode.h
main/network/: mqtt_client.c  mqtt_client.h  mqtt_wrapper.c  mqtt_wrapper.h  weather_api.c  weather_api.h  wifi_manager.c  wifi_manager.h
main/sensors/: co2_sensor.c  co2_sensor.h  sensor_manager.c  sensor_manager.h  sht35.c  sht35.h
main/tools/: i2c_scanner.c
main/ui/: oled_display.c  oled_display.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h
openspec/: project.md
openspec/changes/expand-multi-fan-control/: tasks.md
openspec/changes/extend-indoor-pollutant-types/: tasks.md
openspec/changes/fix-core-implementation-gaps/: design.md
openspec/changes/fix-oled-utf8-display/: tasks.md
openspec/changes/implement-air-quality-system/: design.md  proposal.md  tasks.md
openspec/changes/implement-benefit-cost-algorithm/: design.md  proposal.md  tasks.md
openspec/changes/implement-network-services/: configuration-guide.md  design.md  proposal.md  tasks.md
openspec/changes/implement-oled-display/: design.md  proposal.md  tasks.md
openspec/changes/implement-sensor-actuator-drivers/: proposal.md
openspec/changes/remove-local-online-decision/: proposal.md  tasks.md
openspec/changes/simplify-fan-control/: design.md  proposal.md  tasks.md
openspec/specs/actuator-control/: spec.md
openspec/specs/decision-algorithm/: spec.md
openspec/specs/network-services/: spec.md
openspec/specs/sensor-integration/: spec.md
openspec/specs/system-orchestration/: spec.md
openspec/specs/user-interface/: spec.md
(+38 files in other folders)
