idf_component_register(
    SRCS
        "main.c"
        "sensors/co2_sensor.c"
        "sensors/sht35.c"
        "sensors/sensor_manager.c"
        "actuators/fan_control.c"
        "algorithm/decision_engine.c"
        "algorithm/local_mode.c"
        "network/wifi_manager.c"
        "network/mqtt_wrapper.c"
        "ui/oled_display.c"
        "ui/u8g2_esp32_hal.c"
        "tools/i2c_scanner.c"
    INCLUDE_DIRS
        "."
        "sensors"
        "actuators"
        "algorithm"
        "network"
        "ui"
    REQUIRES
        driver
        esp_wifi
        esp_netif
        nvs_flash
        esp-tls
        mqtt
        json
        esp_timer
        u8g2
)